Fix spacing of the header in phone mode

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -2,14 +2,15 @@ body
   margin-bottom: 30px
 
 header
-  padding: 15px 20px
-  margin: 0 -20px
+  padding: 15px 0
   margin-bottom: 20px
   background: #f6f6f6
   border-bottom: 1px solid #eee
 
   @media (max-width: 767px)
     padding: 8px 20px
+    margin-left: -20px
+    margin-right: -20px
 
   a
     color: #444
